--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                             <div class="card-content-room">
                                 <h1 class="card-header-room fs-18">Suite Room</h1>
                                 <p class="fw-600 fs-15 text-warning">Rs 4500 <span class="text-dark fs-14 text-decoration-line-through ps-2">Rs 5000</span></p>
-                                <button class="btn btn-lg btn-primary w-100">Book Now </button>
+                                <button class="btn btn-lg btn-primary w-100"><a href="tel:9852060366"></a> Book Now </button>
                             </div>
                         </div>
                     </div>
@@ -211,12 +211,11 @@
             <div class="inContainer-hall">
                 <div class="para-hall">
                     <div class="para1-hall">
-                        <h3> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, temporibus dolor!
-                            Accusantium dolorem nihil consequatur at, sam eaque.
+                        <h3> You can reserve a hall for a wedding, a party, or a meeting.
                         </h3>
                     </div>
                     <p>Simply book the hall to get started.</p>
-                    <button class="hall-btn">
+                    <button class=" hall-btn rounded-pill" >
                         Book Now
                     </button>
                 </div>
