--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
     <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.asparksys.com/medias/1670344084376.png">
     <link rel="manifest" href="/site.webmanifest">
 
+    <!-- lightbox -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.css"
+        integrity="sha512-Woz+DqWYJ51bpVk5Fv0yES/edIMXjj3Ynda+KWTIkGoynAMHrqTcDUQltbipuiaD5ymEo9520lyoVOo9jCQOCA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css"
+        integrity="sha512-ZKX+BvQihRJPA8CROKBhDNvoc2aDMOdAlcm7TUQY+35XYtrd3yh95QOOhsPDQY9QnKE0Wqag9y38OIgEvb88cA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
 </head>
 
 <body>
@@ -131,34 +141,115 @@
             </h1>
             <!-- <div class="row">
     </div> -->
-            <div class="rooms-cointainer">
+            <div class="rooms-container">
                 <div class="room-grid">
                     <div class="grid-item-room">
                         <div class="card-room">
                             <div class="room-images">
-                                <img class="card-img-room rounded-top-3" src="https://images.unsplash.com/photo-1611892440504-42a792e24d32?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8aG90ZWwlMjByb29tfGVufDB8fDB8fA%3D%3D&w=1000&q=80" alt="Rome" />
-                                <img class="card-img-room rounded-top-3" src="https://images.unsplash.com/photo-1611892440504-42a792e24d32?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8aG90ZWwlMjByb29tfGVufDB8fDB8fA%3D%3D&w=1000&q=80" alt="Rome" />
-                                <img class="card-img-room rounded-top-3" src="https://images.unsplash.com/photo-1611892440504-42a792e24d32?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8aG90ZWwlMjByb29tfGVufDB8fDB8fA%3D%3D&w=1000&q=80" alt="Rome" />
-                                <img class="card-img-room rounded-top-3" src="https://images.unsplash.com/photo-1611892440504-42a792e24d32?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8aG90ZWwlMjByb29tfGVufDB8fDB8fA%3D%3D&w=1000&q=80" alt="Rome" />
+
+                                <a href="https://cdn.asparksys.com/medias/1670753575298.JPG" data-lightbox="gallery"
+                                    data-title="img">
+                                    <img class="card-img-room rounded-top-3"
+                                        src="https://cdn.asparksys.com/medias/1670753575298.JPG" alt="" class="frame">
+                                </a>
+
+                                <a href="https://cdn.asparksys.com/medias/1670754374648.JPG" data-lightbox="gallery"
+                                    data-title="img">
+                                    <img class="card-img-room rounded-top-3"
+                                        src="https://cdn.asparksys.com/medias/1670754374648.JPG" alt="" class="frame">
+                                </a>
+
+                                <a href="https://cdn.asparksys.com/medias/1670753829990.jpg" data-lightbox="gallery"
+                                    data-title="img">
+                                    <img class="card-img-room rounded-top-3"
+                                        src="https://cdn.asparksys.com/medias/1670753829990.jpg" alt="" class="frame">
+                                </a>
+
+                                <a href="https://cdn.asparksys.com/medias/1670754458533.JPG" data-lightbox="gallery"
+                                    data-title="img">
+                                    <img class="card-img-room rounded-top-3"
+                                        src="https://cdn.asparksys.com/medias/1670754458533.JPG" alt="" class="frame">
+                                </a>
+
+                                <a href="https://cdn.asparksys.com/medias/1670754132436.jpg" data-lightbox="gallery"
+                                    data-title="img">
+                                    <img class="card-img-room rounded-top-3"
+                                        src="https://cdn.asparksys.com/medias/1670754132436.jpg" alt="" class="frame">
+                                </a>
+
                             </div>
                             <div class="card-content-room">
-                                <h1 class="card-header-room fs-18">Delux Room</h1>
-                                <p class="fw-600 fs-15 text-warning">Rs 3500 <span class="text-dark fs-14 text-decoration-line-through ps-2">Rs 4000</spa-n></p>
-                                <button class="btn btn-lg btn-primary w-100">Book Now </button>
+                                <h1 class="card-header-room fs-18">Deluxe Room</h1>
+                                <p class="fw-600 fs-15 text-warning">Rs 3500 <span
+                                        class="text-dark fs-14 text-decoration-line-through ps-2">Rs 4000</spa-n></p>
+                                        <button class="btn btn-lg btn-primary w-100"><a href="tel:9811015121" class="text-white text-decoration-none">Book Now </a></button>
                             </div>
                         </div>
                     </div>
                     <div class="grid-item-room">
                         <div class="card-room">
-                            <img class="card-img-room rounded-top-3" src="https://images.unsplash.com/photo-1611892440504-42a792e24d32?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8aG90ZWwlMjByb29tfGVufDB8fDB8fA%3D%3D&w=1000&q=80" alt="Grand Canyon" />
+                            <div class="room-images">
+
+                                <a href="https://cdn.asparksys.com/medias/1670754509063.JPG" data-lightbox="gallery"
+                                    data-title="img">
+                                    <img class="card-img-room rounded-top-3"
+                                        src="https://cdn.asparksys.com/medias/1670754509063.JPG" alt="" class="frame">
+                                </a>
+
+                                <a href="https://cdn.asparksys.com/medias/1670754547844.JPG" data-lightbox="gallery"
+                                    data-title="img">
+                                    <img class="card-img-room rounded-top-3"
+                                        src="https://cdn.asparksys.com/medias/1670754547844.JPG" alt="" class="frame">
+                                </a>
+                                <a href="https://cdn.asparksys.com/medias/1670754570228.JPG" data-lightbox="gallery"
+                                    data-title="img">
+                                    <img class="card-img-room rounded-top-3"
+                                        src="https://cdn.asparksys.com/medias/1670754570228.JPG" alt="" class="frame">
+                                </a>
+
+
+                                <a href="https://cdn.asparksys.com/medias/1670754132436.jpg" data-lightbox="gallery"
+                                    data-title="img">
+                                    <img class="card-img-room rounded-top-3"
+                                        src="https://cdn.asparksys.com/medias/1670754132436.jpg" alt="" class="frame">
+                                </a>
+
+                            </div>
                             <div class="card-content-room">
                                 <h1 class="card-header-room fs-18">Suite Room</h1>
-                                <p class="fw-600 fs-15 text-warning">Rs 4500 <span class="text-dark fs-14 text-decoration-line-through ps-2">Rs 5000</span></p>
-                                <button class="btn btn-lg btn-primary w-100">Book Now </button>
+                                <p class="fw-600 fs-15 text-warning">Rs 4500 <span
+                                        class="text-dark fs-14 text-decoration-line-through ps-2">Rs 5000</span></p>
+                                        <button class="btn btn-lg btn-primary w-100"><a href="tel:9811015121" class="text-white text-decoration-none">Book Now </a></button>
                             </div>
                         </div>
                     </div>
-                   
+
+                    <div class="grid-item-room">
+                        <div class="card-room">
+                            <div class="room-images">
+
+                                <a href="https://cdn.asparksys.com/medias/1670754760322.JPG" data-lightbox="gallery"
+                                    data-title="img">
+                                    <img class="card-img-room rounded-top-3"
+                                        src="https://cdn.asparksys.com/medias/1670754760322.JPG" alt="" class="frame">
+                                </a>
+
+                                <a href="https://cdn.asparksys.com/medias/1670754784423.JPG" data-lightbox="gallery"
+                                    data-title="img">
+                                    <img class="card-img-room rounded-top-3"
+                                        src="https://cdn.asparksys.com/medias/1670754784423.JPG" alt="" class="frame">
+                                </a>
+
+                            </div>
+                            <div class="card-content-room">
+                                <h1 class="card-header-room fs-18">Hall</h1>
+                                <p class="fw-600 fs-15 text-warning">Rs 10000 <span
+                                        class="text-dark fs-14 text-decoration-line-through ps-2">Rs 11000</span></p>
+                                <button class="btn btn-lg btn-primary w-100"><a href="tel:9811015121" class="text-white text-decoration-none">Book Now </a></button>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
@@ -454,6 +545,14 @@
 
 
     <!-- Scripts -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"
+        integrity="sha512-k2GFCTbp9rQU412BStrcD/rlwv1PYec9SNrkbQlo6RZCf75l6KcC3UwDY8H5n5hl4v77IDtIPwOk9Dqjs/mMBQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.js"
+        integrity="sha512-0rYcJjaqTGk43zviBim8AEjb8cjUKxwxCqo28py38JFKKBd35yPfNWmwoBLTYORC9j/COqldDc9/d1B7dhRYmg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
