--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
                                 <h1 class="card-header-room fs-18">Deluxe Room</h1>
                                 <p class="fw-600 fs-15 text-warning">Rs 3500 <span
                                         class="text-dark fs-14 text-decoration-line-through ps-2">Rs 4000</spa-n></p>
-                                        <button class="btn btn-lg btn-primary w-100"><a href="tel:9852060366" class="text-white text-decoration-none">Book Now </a></button>
+                                <button class="btn btn-lg btn-primary w-100"><a href="tel:9852060366"
+                                        class="text-white text-decoration-none">Book Now </a></button>
                             </div>
                         </div>
                     </div>
@@ -219,8 +220,9 @@
                                 <h1 class="card-header-room fs-18">Suite Room</h1>
                                 <p class="fw-600 fs-15 text-warning">Rs 4500 <span
                                         class="text-dark fs-14 text-decoration-line-through ps-2">Rs 5000</span></p>
-                                        <button class="btn btn-lg btn-primary w-100"><a href="tel:9852060366" class="text-white text-decoration-none">Book Now </a></button>
-            </div>
+                                <button class="btn btn-lg btn-primary w-100"><a href="tel:9852060366"
+                                        class="text-white text-decoration-none">Book Now </a></button>
+                            </div>
                         </div>
                     </div>
 
@@ -245,7 +247,8 @@
                                 <h1 class="card-header-room fs-18">Hall</h1>
                                 <p class="fw-600 fs-15 text-warning">Rs 10000 <span
                                         class="text-dark fs-14 text-decoration-line-through ps-2">Rs 11000</span></p>
-                                <button class="btn btn-lg btn-primary w-100"><a href="tel:9852060366" class="text-white text-decoration-none">Book Now </a></button>
+                                <button class="btn btn-lg btn-primary w-100"><a href="tel:9852060366"
+                                        class="text-white text-decoration-none">Book Now </a></button>
                             </div>
                         </div>
                     </div>
@@ -306,17 +309,14 @@
                         </h3>
                     </div>
                     <p>Simply book the hall to get started.</p>
-                    <button class=" hall-btn rounded-pill" >
+                    <button class=" hall-btn rounded-pill">
                         Book Now
                     </button>
                 </div>
 
                 <div class="photo-hall">
-                    <div class="img1-hall">
-                        <img src="maldives.jpg" alt="" height="170" width="170">
-                    </div>
                     <div class="img2-hall">
-                        <img src="maldives.jpg" alt="" height="170" width="170">
+                        <img class="rounded-3" src="https://cdn.asparksys.com/medias/1670754760322.JPG" alt="" height="170" width="170">
                     </div>
 
                 </div>
