--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
                 <div class="member mx-4">
                     <div class="img-div">
-                        <img class="img-fluid rounded-2" src="https://cdn.asparksys.com/medias/1670253331977.jpg"
+                        <img class="img-fluid rounded-2" src="https://cdn.asparksys.com/medias/1671031948326.jpeg"
                             alt="">
                     </div>
                     <h4>Arjun Thapa</h4>
