--- a/gallery.html
+++ b/gallery.html
@@ -66,7 +66,7 @@
                             </ul>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link text-dark fw-600 fs-16" href="#">Rooms</a>
+                            <a class="nav-link text-dark fw-600 fs-16" href="./index.html#rooms">Rooms</a>
                         </li>
                         <li class="nav-item me-4">
                             <a class="nav-link text-dark fw-600 fs-16" href="./gallery.html">Gallery</a>
