--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/nav.css">
 
+    <meta name="keywords"
+        content="Gokarna Resort, Gokarna, gokarna itahari, gokarna resort bhaliya, Gokarna resort and fun park, gokarna resort fun park, resort gokarna, gokulam resort, Gokarna forest resort, gokulam resort, bhaliya">
+    <meta name="description" content=" Gokarna resort is one of the best tourist destination located in Eastern Nepal. It was
+    established in 2016 AD and from then on
+    It has become the heart of sundar haraincha.">
+    <meta name="author" content="Shekhar Stha">
+
     <!-- Slick CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
         integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw=="
@@ -71,7 +78,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item me-4">
-                                <a class="nav-link text-white fw-500 fs-16" href="#">Rooms</a>
+                                <a class="nav-link text-white fw-500 fs-16" href="#rooms">Rooms</a>
                             </li>
                             <li class="nav-item me-4">
                                 <a class="nav-link text-white fw-500 fs-16" href="./gallery.html">Gallery</a>
@@ -141,7 +148,7 @@
             </h1>
             <!-- <div class="row">
     </div> -->
-            <div class="rooms-container">
+            <div class="rooms-container" id="rooms">
                 <div class="room-grid">
                     <div class="grid-item-room">
                         <div class="card-room">
@@ -258,11 +265,6 @@
             </div>
     </section>
 
-
-
-
-    <!-- bikal -->
-
     <section class="team pt-5 position-relative" id="team">
         <img class="position-absolute eclipse" src="https://cdn.asparksys.com/medias/1670252829444.svg" alt="">
         <img class="position-absolute dotted" src="https://cdn.asparksys.com/medias/1670254655557.png" alt="">
@@ -316,7 +318,8 @@
 
                 <div class="photo-hall">
                     <div class="img2-hall">
-                        <img class="rounded-3" src="https://cdn.asparksys.com/medias/1670754760322.JPG" alt="" height="170" width="170">
+                        <img class="rounded-3" src="https://cdn.asparksys.com/medias/1670754760322.JPG" alt=""
+                            height="170" width="170">
                     </div>
 
                 </div>
@@ -422,7 +425,7 @@
                         <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body text-info">
-                                The entry fee for gate costs 50 Rs
+                                The entry fee for gate costs 100 Rs
                             </div>
                         </div>
                     </div>
