--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     It has become the heart of sundar haraincha.">
     <meta name="author" content="Shekhar Stha">
 
+    <meta name="google-site-verification" content="7z--HfGpnV1jLurPQES4eJyrkLRRzl0RvgE4AGr7xJs" />
+
     <!-- Slick CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
         integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw=="
