--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
     <link rel="stylesheet" href="./css/nav.css">
 
     <meta name="keywords"
-        content="Gokarna Resort, Gokarna, gokarna itahari, gokarna resort bhaliya, Gokarna resort and fun park, gokarna resort fun park, resort gokarna, gokulam resort, Gokarna forest resort, gokulam resort, bhaliya">
-    <meta name="description" content=" Gokarna resort is one of the best tourist destination located in Eastern Nepal. It was
-    established in 2016 AD and from then on
-    It has become the heart of sundar haraincha.">
+        content="Gokarna Resort, Eastern Nepal, Tourist Destination, Sundar HarainchaGokarna Resort, Eastern Nepal, Tourist Destination, Sundar Haraincha, Gokarna, gokarna itahari, gokarna resort bhaliya, Gokarna resort and fun park, gokarna resort fun park, resort gokarna, gokulam resort, Gokarna forest resort, gokulam resort, bhaliya">
+    <meta name="description" content=" Gokarna Resort, established in 2016 in Eastern Nepal, is a popular tourist destination known for being the heart of Sundar Haraincha.">
     <meta name="author" content="Shekhar Stha">
 
     <meta name="google-site-verification" content="7z--HfGpnV1jLurPQES4eJyrkLRRzl0RvgE4AGr7xJs" />
